// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`YAML round-trip (fixtures) > round-trips 01-simple-trigger-action.yaml to identical YAML 1`] = `
"alias: Simple Light Automation
description: Turn on light when motion detected
triggers:
  - trigger: state
    entity_id: binary_sensor.motion_sensor
    to: "on"
actions:
  - action: light.turn_on
    target:
      entity_id: light.living_room
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_190:
        x: 40
        "y": 40
      action_test_1_191:
        x: 360
        "y": 40
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 02-knx-complex.yaml to identical YAML 1`] = `
"alias: KNX Night/Morning Automation
description: Handle KNX button presses for night/morning scenes
triggers:
  - alias: KNX Button Press
    trigger: device
    domain: knx
    device_id: ee504a40b987814032d9ec9c29b1a43f
    type: telegram
    group_value_write: true
    group_value_response: true
    group_value_read: true
    incoming: true
    outgoing: false
    destination:
      - 2/0/11
      - 2/0/5
actions:
  - alias: Time-based Scene Selection
    if:
      - condition: or
        conditions:
          - condition: sun
            after: sunset
            after_offset: "-03:00:00"
          - condition: sun
            before: sunrise
            before_offset: "-03:00:00"
    then:
      - alias: Night Scene
        action: script.turn_on
        target:
          entity_id: script.buonanotte
    else:
      - alias: Morning Scene
        action: script.turn_on
        target:
          entity_id: script.buongiorno
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_186:
        x: 40
        "y": 57
      condition_test_1_187:
        x: 360
        "y": 47
      action_test_2_188:
        x: 700
        "y": 40
      action_test_3_189:
        x: 700
        "y": 180
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 03-multiple-conditions.yaml to identical YAML 1`] = `
"alias: Movie Mode Automation
description: Close covers when movie starts with proper conditions
triggers:
  - trigger: state
    entity_id: media_player.tv
    to: playing
    for: "00:00:05"
conditions:
  - condition: numeric_state
    entity_id: sensor.brightness_sensor
    above: 120
  - condition: template
    value_template: "{% set app = (state_attr('media_player.tv', 'app_name') or '') | string %} {% set ok_apps = ['TV','Apple TV','Prime Video','Netflix'] %} {{ app in ok_apps }}"
  - condition: template
    value_template: "{{ (state_attr('media_player.tv','media_content_type') or '') | lower == 'movie' }}"
actions:
  - choose:
      - conditions:
          - condition: template
            value_template: "{{ states('cover.velux_blind') != 'closed' }}"
        sequence:
          - action: cover.close_cover
            target:
              entity_id: cover.velux_blind
      - conditions:
          - condition: template
            value_template: "{{ states('cover.main_blind') != 'closed' }}"
        sequence: []
  - action: cover.close_cover
    target:
      entity_id: cover.main_blind
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_178:
        x: 40
        "y": 50
      condition_test_1_179:
        x: 360
        "y": 40
      condition_test_2_180:
        x: 700
        "y": 40
      condition_test_3_181:
        x: 1040
        "y": 40
      condition_test_4_182:
        x: 1380
        "y": 40
      action_test_5_183:
        x: 1720
        "y": 104
      condition_test_6_184:
        x: 2040
        "y": 40
      action_test_7_185:
        x: 2380
        "y": 50
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 04-choose-with-default.yaml to identical YAML 1`] = `
"alias: Climate Control Based on Presence
description: Adjust temperature based on occupancy and time
triggers:
  - trigger: state
    entity_id: binary_sensor.occupancy
    for: "00:05:00"
actions:
  - choose:
      - conditions:
          - condition: and
            conditions:
              - condition: state
                entity_id: binary_sensor.occupancy
                state: "on"
              - condition: time
                after: "08:00:00"
                before: "22:00:00"
        sequence:
          - action: climate.set_temperature
            target:
              entity_id: climate.main
            data:
              temperature: 22
      - conditions:
          - condition: and
            conditions:
              - condition: state
                entity_id: binary_sensor.occupancy
                state: "on"
              - condition: time
                after: "22:00:00"
        sequence:
          - action: climate.set_temperature
            target:
              entity_id: climate.main
            data:
              temperature: 20
    default:
      - action: climate.set_temperature
        target:
          entity_id: climate.main
        data:
          temperature: 18
mode: restart
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_172:
        x: 40
        "y": 50
      condition_test_1_173:
        x: 360
        "y": 40
      action_test_2_174:
        x: 700
        "y": 50
      condition_test_3_175:
        x: 40
        "y": 167
      action_test_4_176:
        x: 380
        "y": 160
      action_test_5_177:
        x: 380
        "y": 300
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 05-delays-and-waits.yaml to identical YAML 1`] = `
"alias: Security Light Sequence
description: Automated security light sequence with delays
triggers:
  - trigger: state
    entity_id: binary_sensor.motion_detector
    to: "on"
actions:
  - action: light.turn_on
    target:
      entity_id: light.security_light
    data:
      brightness: 255
  - delay: "00:00:05"
  - action: light.turn_on
    target:
      entity_id: light.security_light
    data:
      brightness: 128
  - wait_template: "{{ is_state('binary_sensor.motion_detector', 'off') }}"
    timeout: "00:10:00"
  - delay: "00:01:00"
  - action: light.turn_off
    target:
      entity_id: light.security_light
mode: restart
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_165:
        x: 40
        "y": 40
      action_test_1_166:
        x: 360
        "y": 40
      delay_test_2_167:
        x: 680
        "y": 45
      action_test_3_168:
        x: 980
        "y": 40
      wait_test_4_169:
        x: 1300
        "y": 45
      delay_test_5_170:
        x: 1600
        "y": 45
      action_test_6_171:
        x: 1900
        "y": 40
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 06-multiple-triggers.yaml to identical YAML 1`] = `
"alias: Multi-trigger Door Bell
description: Ring doorbell from multiple input sources
triggers:
  - trigger: state
    entity_id: binary_sensor.door_button
    to: "on"
  - trigger: mqtt
    topic: doorbell/ring
  - trigger: webhook
    webhook_id: doorbell_webhook
  - trigger: time
    at: "12:00:00"
actions:
  - action: media_player.play_media
    target:
      entity_id: media_player.speakers
    data:
      media_content_id: /local/sounds/doorbell.mp3
      media_content_type: music
  - action: notify.mobile_app
    data:
      message: Doorbell activated
      title: Home Security
mode: queued
max: 3
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_159:
        x: 40
        "y": 180
      trigger_test_1_160:
        x: 40
        "y": 320
      trigger_test_2_161:
        x: 40
        "y": 460
      trigger_test_3_162:
        x: 40
        "y": 40
      action_test_4_163:
        x: 360
        "y": 188
      action_test_5_164:
        x: 680
        "y": 188
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 07-adaptive-lighting-complex.yaml to identical YAML 1`] = `
"alias: Adaptive Lighting Quando Accendo Luci
description: ""
triggers:
  - trigger: device
    domain: knx
    device_id: ee504a40b987814032d9ec9c29b1a43f
    type: telegram
    group_value_write: true
    incoming: true
    destination:
      - 2/4/7
      - 2/4/3
      - 2/4/4
      - 2/4/5
      - 2/4/6
      - 0/0/191
      - 0/0/142
      - 0/0/248
      - 0/0/1
actions:
  - variables:
      current_node: condition_test_1_143
      flow_context: {}
  - alias: State Machine Loop
    repeat:
      until: "{{ current_node == \\"END\\" }}"
      sequence:
        - choose:
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"condition_test_1_143\\" }}"
              sequence:
                - variables:
                    current_node: "{% if trigger.payload == 1 %}condition_test_2_144{% else %}END{% endif %}"
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"condition_test_2_144\\" }}"
              sequence:
                - variables:
                    current_node: "{% if target_light is not none %}wait_test_3_145{% else %}END{% endif %}"
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"wait_test_3_145\\" }}"
              sequence:
                - wait_template: "{{ is_state(target_light, 'on') }}"
                  timeout: "00:00:03"
                - variables:
                    current_node: condition_test_4_146
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"condition_test_4_146\\" }}"
              sequence:
                - variables:
                    current_node: "{% if is_state(target_light, 'on') %}action_test_5_147{% else %}END{% endif %}"
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"action_test_5_147\\" }}"
              sequence:
                - action: light.turn_on
                  target:
                    entity_id: "{{ target_light }}"
                  data:
                    brightness_pct: 100
                    transition: 0
                - variables:
                    current_node: delay_test_6_148
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"delay_test_6_148\\" }}"
              sequence:
                - delay:
                    milliseconds: 500
                - variables:
                    current_node: set_variables_test_7_149
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"set_variables_test_7_149\\" }}"
              sequence:
                - variables:
                    color_before: "{% set a = state_attr(target_light, 'hs_color') %} {% set b = state_attr(target_light, 'xy_color') %} {% set c = state_attr(target_light, 'color_temp_kelvin') %} {% set d = state_attr(target_light, 'color_temp') %} {{ [a, b, c, d] }}"
                - variables:
                    current_node: action_test_8_150
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"action_test_8_150\\" }}"
              sequence:
                - action: adaptive_lighting.apply
                  data:
                    entity_id: switch.adaptive_lighting_adapt_color_dali
                    lights:
                      - "{{ target_light }}"
                    turn_on_lights: false
                    adapt_brightness: false
                    adapt_color: true
                    transition: 0
                - variables:
                    current_node: delay_test_9_151
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"delay_test_9_151\\" }}"
              sequence:
                - delay:
                    milliseconds: 350
                - variables:
                    current_node: set_variables_test_10_152
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"set_variables_test_10_152\\" }}"
              sequence:
                - variables:
                    color_after_1: "{% set a = state_attr(target_light, 'hs_color') %} {% set b = state_attr(target_light, 'xy_color') %} {% set c = state_attr(target_light, 'color_temp_kelvin') %} {% set d = state_attr(target_light, 'color_temp') %} {{ [a, b, c, d] }}"
                - variables:
                    current_node: condition_test_11_153
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"condition_test_11_153\\" }}"
              sequence:
                - variables:
                    current_node: "{% if is_state(target_light, 'on') and (color_after_1 == color_before) %}action_test_12_154{% else %}set_variables_test_14_156{% endif %}"
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"action_test_12_154\\" }}"
              sequence:
                - action: adaptive_lighting.apply
                  data:
                    entity_id: switch.adaptive_lighting_adapt_color_dali
                    lights:
                      - "{{ target_light }}"
                    turn_on_lights: false
                    adapt_brightness: false
                    adapt_color: true
                    transition: 0
                - variables:
                    current_node: delay_test_13_155
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"delay_test_13_155\\" }}"
              sequence:
                - delay:
                    milliseconds: 350
                - variables:
                    current_node: set_variables_test_14_156
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"set_variables_test_14_156\\" }}"
              sequence:
                - variables:
                    color_after_2: "{% set a = state_attr(target_light, 'hs_color') %} {% set b = state_attr(target_light, 'xy_color') %} {% set c = state_attr(target_light, 'color_temp_kelvin') %} {% set d = state_attr(target_light, 'color_temp') %} {{ [a, b, c, d] }}"
                - variables:
                    current_node: condition_test_15_157
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"condition_test_15_157\\" }}"
              sequence:
                - variables:
                    current_node: "{% if is_state(target_light, 'on') and (color_after_2 == color_before) %}action_test_16_158{% else %}END{% endif %}"
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"action_test_16_158\\" }}"
              sequence:
                - action: adaptive_lighting.apply
                  data:
                    entity_id: switch.adaptive_lighting_adapt_color_dali
                    lights:
                      - "{{ target_light }}"
                    turn_on_lights: false
                    adapt_brightness: false
                    adapt_color: true
                    transition: 0
                - variables:
                    current_node: END
          default:
            - service: system_log.write
              data:
                message: "FLODE: Unknown state \\"{{ current_node }}\\", ending flow"
                level: warning
            - variables:
                current_node: END
mode: single
variables:
  ga_to_light:
    2/4/7: light.zona
    2/4/3: light.camera_da_letto
    2/4/4: light.bagno_padronale
    2/4/5: light.cucina
    2/4/6: light.soggiorno
    0/0/191: light.soffitto_studio
    0/0/142: light.soffitto_bagno_di_servizio
    0/0/248: light.lampadario_soggiorno
    0/0/1: light.faretti_disimpegno
  ga: "{{ trigger.destination }}"
  target_light: "{{ ga_to_light.get(ga) }}"
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_142:
        x: 40
        "y": 54
      condition_test_1_143:
        x: 360
        "y": 44
      condition_test_2_144:
        x: 700
        "y": 44
      wait_test_3_145:
        x: 1040
        "y": 59
      condition_test_4_146:
        x: 1340
        "y": 44
      action_test_5_147:
        x: 1680
        "y": 54
      delay_test_6_148:
        x: 2000
        "y": 59
      set_variables_test_7_149:
        x: 2300
        "y": 54
      action_test_8_150:
        x: 2620
        "y": 54
      delay_test_9_151:
        x: 2940
        "y": 59
      set_variables_test_10_152:
        x: 3240
        "y": 54
      condition_test_11_153:
        x: 3560
        "y": 44
      action_test_12_154:
        x: 3900
        "y": 71
      delay_test_13_155:
        x: 4220
        "y": 76
      set_variables_test_14_156:
        x: 4520
        "y": 58
      condition_test_15_157:
        x: 4840
        "y": 48
      action_test_16_158:
        x: 5180
        "y": 58
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: state-machine
"
`;

exports[`YAML round-trip (fixtures) > round-trips 08-sm-simple-cafe.yaml to identical YAML 1`] = `
"alias: CAFE
description: ""
triggers:
  - alias: Trigger 1
    trigger: state
    entity_id: alarm_control_panel.allarme
actions:
  - alias: "Action: light.turn_on"
    action: light.turn_on
    target:
      entity_id: light.studio
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_1767901134917_0:
        x: 100
        "y": 401
      action_1767904379001_0:
        x: 195
        "y": 180
    graph_id: 15198922-f25d-427a-bcfa-958e7a85d62b
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 09-templates.yaml to identical YAML 1`] = `
"alias: "DHW: Smart Arrival (Maria)"
description: "Arrival: Heats if cold (after 5h away). Departure: Turns OFF (only if warm)."
triggers:
  - trigger: zone
    entity_id: person.maria
    event: enter
    zone: zone.city_limits
    id: arriving
  - trigger: zone
    entity_id: person.maria
    event: leave
    zone: zone.city_limits
    id: leaving
  - trigger: numeric_state
    entity_id: water_heater.altherma
    above: 33
    attribute: current_temperature
    id: temp_limit_reached
actions:
  - choose:
      - conditions:
          - condition: trigger
            id: arriving
          - condition: template
            value_template: |
              {{ (as_timestamp(now()) - as_timestamp(trigger.from_state.last_changed)) > 3600 }}
        sequence:
          - if:
              - condition: numeric_state
                entity_id: water_heater.altherma
                above: 39
                attribute: current_temperature
            then:
              - action: notify.mobile_app_iphone_maria
                data:
                  title: 🚿 Hot Water Ready
                  message: Welcome back! There is plenty of hot water waiting for you.
            else:
              - action: water_heater.turn_on
                target:
                  entity_id: water_heater.altherma
              - action: notify.mobile_app_iphone_maria
                data:
                  title: 🚿 Heating Water
                  message: Welcome back! Turning on the water heater now.
      - conditions:
          - condition: or
            conditions:
              - condition: trigger
                id: leaving
              - condition: trigger
                id: temp_limit_reached
          - condition: numeric_state
            entity_id: water_heater.altherma
            above: 33
            attribute: current_temperature
          - condition: not
            conditions:
              - condition: zone
                entity_id: person.maria
                zone: zone.city_limits
        sequence:
          - action: water_heater.turn_off
            target:
              entity_id: water_heater.altherma
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_129:
        x: 40
        "y": 300
      trigger_test_1_130:
        x: 40
        "y": 440
      trigger_test_2_131:
        x: 40
        "y": 160
      condition_test_3_132:
        x: 360
        "y": 287
      condition_test_4_133:
        x: 700
        "y": 287
      condition_test_5_134:
        x: 1040
        "y": 287
      action_test_6_135:
        x: 1380
        "y": 280
      action_test_7_136:
        x: 1380
        "y": 420
      action_test_8_137:
        x: 1700
        "y": 420
      condition_test_9_138:
        x: 40
        "y": 40
      condition_test_10_139:
        x: 380
        "y": 40
      condition_test_11_140:
        x: 720
        "y": 40
      action_test_12_141:
        x: 1060
        "y": 50
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 10-multiple-entity-ids.yaml to identical YAML 1`] = `
"alias: Plex Light Toggle - Living Room
description: |-
  Sets Movie Lights when Playing, Turns on Couch Light when Paused after sunset.
  Includes a 2-second delay for scrubbing and smooth dimming transitions.
triggers:
  - trigger: state
    entity_id:
      - media_player.v3plus
      - media_player.shield
    to: playing
    id: playing
  - trigger: state
    entity_id:
      - media_player.v3plus
      - media_player.shield
    to: paused
    for:
      seconds: 2
    id: paused
conditions:
  - condition: sun
    after: sunset
    after_offset: "00:05:00"
actions:
  - choose:
      - conditions:
          - condition: trigger
            id: playing
        sequence:
          - action: light.turn_off
            target:
              entity_id:
                - light.0a12b58eadb1ae45d36fdb96e025444d
                - light.751314eaa8749ab751d478948a65b33e
            data:
              transition: 2
      - conditions:
          - condition: trigger
            id: paused
        sequence:
          - action: light.turn_on
            target:
              entity_id: light.751314eaa8749ab751d478948a65b33e
            data:
              brightness_pct: 5
              transition: 3
mode: restart
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_122:
        x: 40
        "y": 277
      trigger_test_1_123:
        x: 40
        "y": 137
      condition_test_2_124:
        x: 360
        "y": 200
      condition_test_3_125:
        x: 700
        "y": 263
      action_test_4_126:
        x: 1040
        "y": 273
      condition_test_5_127:
        x: 360
        "y": 40
      action_test_6_128:
        x: 700
        "y": 50
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 11-sm-basic-cafe.yaml to identical YAML 1`] = `
"alias: Position Test
description: ""
triggers:
  - trigger: state
    entity_id: switch.test
actions:
  - variables:
      current_node: action-sm-1
      flow_context: {}
  - alias: State Machine Loop
    repeat:
      until: "{{ current_node == \\"END\\" }}"
      sequence:
        - choose:
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"action-sm-1\\" }}"
              sequence:
                - alias: "Action: switch.turn_on"
                  action: switch.turn_on
                - variables:
                    current_node: action-sm-2
            - conditions:
                - condition: template
                  value_template: "{{ current_node == \\"action-sm-2\\" }}"
              sequence:
                - alias: "Action: switch.turn_off"
                  action: switch.turn_off
                - variables:
                    current_node: action-sm-1
          default:
            - service: system_log.write
              data:
                message: "FLODE: Unknown state \\"{{ current_node }}\\", ending flow"
                level: warning
            - variables:
                current_node: END
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger-sm:
        x: 250
        "y": 100
      action-sm-1:
        x: 255
        "y": 240
      action-sm-2:
        x: 150
        "y": 405
    graph_id: 624cf5ff-0ab9-4881-b6c4-c2359635230f
    graph_version: 1
    strategy: state-machine
"
`;

exports[`YAML round-trip (fixtures) > round-trips 12-maya.yaml to identical YAML 1`] = `
"alias: Reset timer Maya se armadio chiuso → porta aperta → porta riaperta → armadio riaperto
description: ""
triggers:
  - trigger: state
    entity_id: binary_sensor.armadio_cappotti_soggiorno
    to: "off"
conditions:
  - condition: state
    entity_id: input_boolean.periodo_giorno
    state: "on"
actions:
  - wait_for_trigger:
      - trigger: state
        entity_id: binary_sensor.porta_blindata
        from: "on"
        to: "off"
    timeout: "00:00:30"
    continue_on_timeout: false
  - wait_for_trigger:
      - trigger: state
        entity_id: binary_sensor.porta_blindata
        from: "off"
        to: "on"
    timeout: "00:15:00"
    continue_on_timeout: false
  - wait_for_trigger:
      - trigger: state
        entity_id: binary_sensor.armadio_cappotti_soggiorno
        to: "on"
    timeout: "00:00:30"
    continue_on_timeout: false
  - action: timer.start
    target:
      entity_id: timer.uscita_maya
mode: restart
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_116:
        x: 40
        "y": 50
      condition_test_1_117:
        x: 360
        "y": 40
      wait_test_2_118:
        x: 700
        "y": 55
      wait_test_3_119:
        x: 1000
        "y": 55
      wait_test_4_120:
        x: 1300
        "y": 55
      action_test_5_121:
        x: 1600
        "y": 50
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 13-many-sequences.yaml to identical YAML 1`] = `
"alias: ensuite fan dupe
description: ""
triggers:
  - trigger: time
    at: "21:00:00"
    id: NightOff
  - trigger: state
    entity_id:
      - light.ensuite
    to:
      - "on"
    id: light-toggled-on
  - trigger: state
    entity_id:
      - light.ensuite
    to:
      - "off"
    id: light-toggled-off
  - trigger: state
    entity_id:
      - switch.ensuite_fan_boost
    to:
      - "off"
    id: fan-switch-toggled-off
actions:
  - choose:
      - conditions:
          - condition: trigger
            id: NightOff
        sequence:
          - if:
              - condition: state
                entity_id: switch.ensuite
                state:
                  - "on"
            then:
              - wait_for_trigger:
                  - trigger: state
                    entity_id:
                      - switch.ensuite
                    to:
                      - "off"
                timeout:
                  hours: 0
                  minutes: 20
                  seconds: 0
                  milliseconds: 0
              - metadata: {}
                action: switch.turn_off
                target:
                  entity_id:
                    - switch.ensuite_fan
                    - switch.ensuite_fan_boost
            else:
              - metadata: {}
                action: switch.turn_off
                target:
                  entity_id:
                    - switch.ensuite_fan
                    - switch.ensuite_fan_boost
      - conditions:
          - condition: trigger
            id:
              - light-toggled-on
              - fan-switch-toggled-on
          - condition: time
            after: "05:45:00"
            before: "21:00:00"
          - condition: state
            entity_id: light.ensuite
            state:
              - "on"
          - condition: state
            entity_id: switch.ensuite_fan
            state:
              - "off"
        sequence:
          - metadata: {}
            action: switch.turn_on
            target:
              entity_id: switch.ensuite_fan
      - conditions:
          - condition: trigger
            id:
              - light-toggled-off
              - fan-switch-toggled-off
          - condition: time
            after: "05:45:00"
            before: "21:00:00"
        sequence:
          - if:
              - condition: trigger
                id: light-toggled-off
            then:
              - delay:
                  hours: 0
                  minutes: 30
                  seconds: 0
                  milliseconds: 0
              - metadata: {}
                action: switch.turn_off
                target:
                  entity_id: switch.ensuite_fan
            else:
              - delay:
                  hours: 1
                  minutes: 0
                  seconds: 0
                  milliseconds: 0
              - metadata: {}
                action: switch.turn_off
                target:
                  entity_id: switch.ensuite_fan
mode: restart
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_95:
        x: 40
        "y": 211
      trigger_test_1_96:
        x: 40
        "y": 491
      trigger_test_2_97:
        x: 40
        "y": 70
      trigger_test_3_98:
        x: 40
        "y": 351
      condition_test_4_99:
        x: 360
        "y": 214
      condition_test_5_100:
        x: 700
        "y": 214
      wait_test_6_101:
        x: 1060
        "y": 347
      action_test_7_102:
        x: 1380
        "y": 342
      action_test_8_103:
        x: 1040
        "y": 207
      condition_test_9_104:
        x: 360
        "y": 494
      condition_test_10_105:
        x: 700
        "y": 494
      condition_test_11_106:
        x: 1040
        "y": 494
      condition_test_12_107:
        x: 1380
        "y": 494
      action_test_13_108:
        x: 1720
        "y": 504
      condition_test_14_109:
        x: 360
        "y": 47
      condition_test_15_110:
        x: 700
        "y": 47
      condition_test_16_111:
        x: 1040
        "y": 47
      delay_test_17_112:
        x: 1400
        "y": 45
      action_test_18_113:
        x: 1720
        "y": 40
      delay_test_19_114:
        x: 1400
        "y": 185
      action_test_20_115:
        x: 1720
        "y": 180
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 14-washingmachine.yaml to identical YAML 1`] = `
"alias: Verzend bericht indien wasmachine gereed
description: Stuur melding zodra wasmachine gereed is
triggers:
  - trigger: numeric_state
    entity_id:
      - sensor.noord_wasplaats_vermogen_wasmachine
    for:
      hours: 0
      minutes: 2
      seconds: 0
    above: 10
    id: machine_on
  - trigger: numeric_state
    entity_id:
      - sensor.noord_wasplaats_vermogen_wasmachine
    for:
      hours: 0
      minutes: 5
      seconds: 0
    below: 2
    id: machine_off
actions:
  - choose:
      - conditions:
          - condition: trigger
            id: machine_on
          - condition: state
            entity_id: input_boolean.wasmachine_status
            state: "off"
        sequence:
          - action: input_boolean.turn_on
            target:
              entity_id: input_boolean.wasmachine_status
          - action: input_number.set_value
            target:
              entity_id: input_number.wasmachine_energie_start_cyclus
            data:
              value: "{{ states('sensor.noord_wasplaats_energie_wasmachine') }}"
      - conditions:
          - condition: trigger
            id: machine_off
          - condition: state
            entity_id: input_boolean.wasmachine_status
            state: "on"
        sequence:
          - action: input_boolean.turn_off
            target:
              entity_id: input_boolean.wasmachine_status
          - variables:
              verbruik_cyclus: "{{ (((states('sensor.noord_wasplaats_energie_wasmachine') | float) - (states('input_number.wasmachine_energie_start_cyclus') | float)) * 1000) | int }}"
          - action: script.notify_by_label
            data:
              labels:
                - gsm_bart
                - gsm_cindy
              title: Wasmachine gereed
              message: Cyclus heeft ({{ verbruik_cyclus | int }} Wh verbruikt
          - action: tts.cloud_say
            data:
              entity_id:
                - media_player.kitchen_speaker
                - media_player.zithoek_speaker
              message: Het wasmachine is gereed en moet leeg gemaakt worden
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_83:
        x: 40
        "y": 222
      trigger_test_1_84:
        x: 40
        "y": 63
      condition_test_2_85:
        x: 360
        "y": 200
      condition_test_3_86:
        x: 700
        "y": 200
      action_test_4_87:
        x: 1040
        "y": 210
      action_test_5_88:
        x: 1360
        "y": 210
      condition_test_6_89:
        x: 360
        "y": 40
      condition_test_7_90:
        x: 700
        "y": 40
      action_test_8_91:
        x: 1040
        "y": 50
      set_variables_test_9_92:
        x: 1360
        "y": 50
      action_test_10_93:
        x: 1680
        "y": 50
      action_test_11_94:
        x: 2000
        "y": 50
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 15-open-ccu.yaml to identical YAML 1`] = `
"alias: Zapfenstreich Automatisierung
description: ""
triggers:
  - trigger: state
    entity_id:
      - input_boolean.zapfenstreich
    from: "off"
    to: "on"
    id: ZapfenstreichAn
conditions:
  - condition: and
    conditions:
      - condition: state
        entity_id: input_boolean.zapfenstreich
        state: "on"
      - condition: trigger
        id: ZapfenstreichAn
actions:
  - action: input_boolean.turn_off
    target:
      entity_id: input_boolean.gartenbeleuchtung
  - device_id: 5c52f5c8c8e59972a9f7d359a5bcaf2f
    domain: switch
    type: turn_off
    entity_id: 4906302ad1fd63fb7a358ce3e30146e4
  - device_id: ee8b0db24fc5d9ca7cf1e9ad4d406e45
    domain: switch
    type: turn_off
    entity_id: 616e70061d2add8d6295bd2204b25f7d
  - device_id: b8ac21757194c9fba5cac089fd8ede51
    domain: switch
    type: turn_off
    entity_id: cace6d6a39ec897bc6560f945c7fc689
  - device_id: 8255c85496be5b6962a278ebdd7411e8
    domain: switch
    type: turn_off
    entity_id: 62f9263c0006b6f9acdf12a35139e095
  - parallel:
      - device_id: ad7a2c892d7118cbfcdc89d2e2b3323d
        domain: cover
        type: close
        entity_id: 63bff85b1243e4da6edf77f186725bc6
      - - delay:
            hours: 0
            minutes: 0
            seconds: 10
            milliseconds: 0
        - device_id: e2a191a70faa1f7d07a4068b51b417fb
          domain: light
          type: turn_off
          entity_id: fe1b6aecf59b3bdd146aec7d8e589496
        - action: input_boolean.turn_off
          target:
            entity_id: input_boolean.zapfenstreich
      - metadata: {}
        action: input_boolean.turn_off
        target:
          entity_id: input_boolean.gartenbeleuchtung
  - device_id: 38156e5e85c33bd4d2129e9c7a67c5af
    domain: switch
    type: turn_off
    entity_id: f7cbd6770bbb3bb5276c3d8e991e9b4d
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_70:
        x: 40
        "y": 180
      condition_test_1_71:
        x: 360
        "y": 170
      action_test_2_72:
        x: 700
        "y": 180
      action_test_3_73:
        x: 1020
        "y": 180
      action_test_4_74:
        x: 1340
        "y": 180
      action_test_5_75:
        x: 1660
        "y": 180
      action_test_6_76:
        x: 1980
        "y": 180
      action_test_7_77:
        x: 2600
        "y": 320
      delay_test_8_78:
        x: 2300
        "y": 185
      action_test_9_79:
        x: 2600
        "y": 180
      action_test_10_80:
        x: 2920
        "y": 180
      action_test_11_81:
        x: 2920
        "y": 40
      action_test_12_82:
        x: 3240
        "y": 180
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 16-paperless.yaml to identical YAML 1`] = `
"alias: Paperless AI - Auto Shutdown After 4 Hours
description: Automatically shutdown Paperless AI container after 4 hours of runtime
triggers:
  - trigger: state
    entity_id: binary_sensor.lxc_paperless_ai_209_status
    to: "on"
    for:
      hours: 4
conditions:
  - condition: state
    entity_id: binary_sensor.lxc_paperless_ai_209_status
    state: "on"
actions:
  - action: persistent_notification.create
    data:
      title: Container Auto-Shutdown
      message: Paperless AI (209) has been running for 4 hours and will be shut down now.
      notification_id: paperless_ai_shutdown
  - action: button.press
    target:
      entity_id: button.lxc_paperless_ai_209_shutdown
  - delay:
      seconds: 5
  - action: persistent_notification.create
    data:
      title: Container Shutdown Complete
      message: Paperless AI (209) has been shut down successfully.
      notification_id: paperless_ai_shutdown_complete
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_64:
        x: 40
        "y": 50
      condition_test_1_65:
        x: 360
        "y": 40
      action_test_2_66:
        x: 700
        "y": 50
      action_test_3_67:
        x: 1020
        "y": 50
      delay_test_4_68:
        x: 1340
        "y": 55
      action_test_5_69:
        x: 1640
        "y": 50
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 17-nested-condition.yaml to identical YAML 1`] = `
"alias: "Auto light TV : Handle supposed state"
description: ""
triggers:
  - trigger: state
    entity_id:
      - binary_sensor.xxx_presence_sensor
    to:
      - "on"
    id: Occupancy detected
  - trigger: state
    entity_id:
      - binary_sensor.xxx_presence_sensor
    to:
      - "off"
    for:
      hours: 0
      minutes: 0
      seconds: 30
    id: Occupancy clear for x
  - trigger: numeric_state
    entity_id:
      - sensor.xxx_light_level
    below: 60
    id: Illuminance below
  - trigger: numeric_state
    entity_id:
      - sensor.xxx_light_level
    above: 90
    id: Illuminance above
actions:
  - if:
      - condition: or
        conditions:
          - condition: and
            conditions:
              - condition: trigger
                id: Occupancy detected
              - condition: numeric_state
                entity_id: sensor.xxx_light_level
                below: 60
          - condition: and
            conditions:
              - condition: trigger
                id: Illuminance below
              - condition: not
                conditions:
                  - condition: state
                    entity_id: xxx_presence_sensor
                    state:
                      - "off"
                    for:
                      hours: 0
                      minutes: 0
                      seconds: 30
    then:
      - action: input_boolean.turn_on
        target:
          entity_id: input_boolean.tv_light_supposed_state
    else:
      - action: input_boolean.turn_off
        target:
          entity_id: input_boolean.tv_light_supposed_state
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_57:
        x: 40
        "y": 180
      trigger_test_1_58:
        x: 40
        "y": 320
      trigger_test_2_59:
        x: 40
        "y": 460
      trigger_test_3_60:
        x: 40
        "y": 40
      condition_test_4_61:
        x: 360
        "y": 180
      action_test_5_62:
        x: 700
        "y": 173
      action_test_6_63:
        x: 700
        "y": 313
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 18-sensor-trigger.yaml to identical YAML 1`] = `
"alias: Kitchen.Freezer_Temp.Automation
description: ""
triggers:
  - trigger: device
    entity_id: 05dfa830b43a4f97adfb34a06c2bce50
    for:
      hours: 0
      minutes: 15
      seconds: 0
    above: 20
    device_id: 7239e87f810ebbd9be93fe71f3977211
    domain: sensor
    type: temperature
actions:
  - action: notify.e_mail
    data:
      message: The Freezer in the Kitchen is Open!
      title: Alert!
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_55:
        x: 40
        "y": 40
      action_test_1_56:
        x: 360
        "y": 40
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 19-nested-condition.yaml to identical YAML 1`] = `
"alias: Weekly Full Backup
description: Weekly Full Backup
triggers:
  - trigger: time
    at: "03:00:00"
conditions:
  - condition: and
    conditions:
      - condition: time
        weekday:
          - sat
actions:
  - action: hassio.backup_full
    data:
      compressed: true
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_52:
        x: 40
        "y": 50
      condition_test_1_53:
        x: 360
        "y": 40
      action_test_2_54:
        x: 700
        "y": 50
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 20-select.yaml to identical YAML 1`] = `
"alias: Fox batteries to Self Use CAFE TEST
description: ""
triggers:
  - trigger: device
    entity_id: sensor.myenergi_mg_charger_power_charging
    below: 1450
    type: power
    device_id: 668ca38238b4ea09a8c51fa4d4f45e7c
    domain: sensor
conditions:
  - condition: time
    enabled: false
    after: "05:30:00"
    before: "23:30:00"
actions:
  - device_id: fc32de247133cbee1c2587690d3f4629
    domain: select
    type: select_option
    entity_id: select.work_mode
    option: Self Use
  - metadata: {}
    action: notify.mobile_app_pbw_iphone
    data:
      message: Change slot closed
      title: Self Use reactivated
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_48:
        x: 40
        "y": 50
      condition_test_1_49:
        x: 360
        "y": 40
      action_test_2_50:
        x: 700
        "y": 50
      action_test_3_51:
        x: 1020
        "y": 50
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 21-trigger-to-null.yaml to identical YAML 1`] = `
"alias: HVAC - climate set
description: ""
triggers:
  - trigger: state
    entity_id:
      - climate.CLIMATE_ENTITY
    from: "off"
actions:
  - delay:
      hours: 0
      minutes: 0
      seconds: 2
      milliseconds: 0
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_46:
        x: 40
        "y": 40
      delay_test_1_47:
        x: 360
        "y": 45
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 22-trigger-target-array.yaml to identical YAML 1`] = `
"alias: Import Test
description: ""
triggers:
  - trigger: light.turned_off
    target:
      entity_id: light.bathroom_vanity
    options:
      behavior: any
actions:
  - metadata: {}
    action: light.turn_on
    target:
      entity_id: light.ceiling_lamp
mode: restart
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_44:
        x: 40
        "y": 40
      action_test_1_45:
        x: 360
        "y": 40
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 23-trigger-commands-array.yaml to identical YAML 1`] = `
"alias: Voice Command/Vacuum Robot
description: ""
triggers:
  - trigger: conversation
    command:
      - vacuum the house
      - clean up please
      - vacuum the main floor
actions:
  - metadata: {}
    action: mqtt.publish
    data:
      evaluate_payload: false
      qos: 0
      retain: false
      payload: "{}"
      topic: redacted
  - set_conversation_response: The cleaners are coming.
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_41:
        x: 40
        "y": 40
      action_test_1_42:
        x: 360
        "y": 40
      action_test_2_43:
        x: 680
        "y": 40
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 24-disabled-choose.yaml to identical YAML 1`] = `
"alias: Command - Sofabaton Dispatcher
description: Triggers actions based on URL query parameters and passes control to the Command Router.
triggers:
  - trigger: webhook
    webhook_id: sofabaton_webkook
    allowed_methods:
      - GET
      - POST
    local_only: true
actions:
  - variables:
      action_type: "{{ trigger.query.action | lower | default(none) }}"
      action_value: "{{ trigger.query.value | default(none) }}"
      sofabaton_area: "{{ trigger.query.area_key | default('living_room') }}"
      trigger_receiver: "{{ trigger.query.receiver | default(none, true) }}"
      target_home_music_player: |
        {{ 
          states.sensor.home_music_player.state
        }}
      target_receiver: |
        {{ label_entities('receiver') 
          | select('match', 'media_player.')
          | list
        }}
      default_receiver: |
        {{
          area_entities(sofabaton_area) 
          | select('match','media_player.')
          | select('in', target_receiver )
          | first
        }}
      target_media_player: |
        {{ default_receiver if trigger_receiver == 1 else 0 }}
      target_remote: |
        {% set remotes = target_list | select('match', 'remote.') | list %} 
        {{ remotes[0] if remotes | length > 0 else none }}
      incoming_payload: |
        {{ trigger.json | default({"hold_secs":0}) }}
      current_source: |
        {{ state_attr(default_receiver, 'source') }}
  - event: universal_controller_command
    alias: Emit Generic Universal Controller Command Event
    event_data:
      source_device: sofabaton
      action_type: "{{ action_type }}"
      action_value: "{{ action_value }}"
      command_input: "{{ router_command }}"
      area_key: "{{ sofabaton_area }}"
      data_payload: "{{ incoming_payload }}"
      overrides: {}
  - if:
      - condition: template
        enabled: false
        value_template: "{{ action_type == 'activity_call' }}"
    then:
      - alias: Execute Universal Activity Orchestrator
        action: script.universal_media_activity_orchestrator
        data:
          activity_key: "{{ action_value }}"
        enabled: false
    else: []
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_36:
        x: 40
        "y": 50
      set_variables_test_1_37:
        x: 360
        "y": 50
      action_test_2_38:
        x: 680
        "y": 50
      condition_test_3_39:
        x: 1000
        "y": 40
      action_test_4_40:
        x: 1340
        "y": 50
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 25-repeat-while.yaml to identical YAML 1`] = `
"alias: Repeat While Test
description: Test repeat while loop
triggers:
  - trigger: state
    entity_id: binary_sensor.motion
    to: "on"
actions:
  - repeat:
      while:
        - condition: state
          entity_id: binary_sensor.motion
          state: "on"
      sequence:
        - action: light.turn_on
          target:
            entity_id: light.living_room
        - delay:
            seconds: 5
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_32:
        x: 40
        "y": 50
      condition_test_1_33:
        x: 360
        "y": 40
      action_test_2_34:
        x: 700
        "y": 104
      delay_test_3_35:
        x: 1020
        "y": 50
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 26-repeat-until.yaml to identical YAML 1`] = `
"alias: Repeat Until Test
description: Test repeat until loop
triggers:
  - trigger: state
    entity_id: binary_sensor.door
    to: "on"
actions:
  - repeat:
      until:
        - condition: state
          entity_id: binary_sensor.door
          state: "off"
      sequence:
        - action: notify.mobile_app
          data:
            message: Door is still open!
        - delay:
            minutes: 1
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_28:
        x: 40
        "y": 46
      action_test_1_29:
        x: 360
        "y": 46
      delay_test_2_30:
        x: 680
        "y": 104
      condition_test_3_31:
        x: 980
        "y": 40
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 27-repeat-count.yaml to identical YAML 1`] = `
"alias: Repeat Count Test
description: Test repeat count loop
triggers:
  - trigger: state
    entity_id: input_boolean.test
    to: "on"
actions:
  - repeat:
      count: 3
      sequence:
        - action: light.toggle
          target:
            entity_id: light.living_room
        - delay:
            seconds: 1
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_22:
        x: 40
        "y": 258
      set_variables_test_1_23:
        x: 370
        "y": 258
      action_test_2_24:
        x: 700
        "y": 121
      delay_test_3_25:
        x: 1020
        "y": 44
      set_variables_test_4_26:
        x: 40
        "y": 40
      condition_test_5_27:
        x: 360
        "y": 98
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 28-repeat-nested-if.yaml to identical YAML 1`] = `
"alias: Repeat Inside If
description: Test repeat block nested inside if/then/else
triggers:
  - trigger: time
    at: "08:00:00"
actions:
  - if:
      - condition: state
        entity_id: binary_sensor.workday
        state: "on"
    then:
      - repeat:
          while:
            - condition: state
              entity_id: input_boolean.reminder_needed
              state: "on"
          sequence:
            - action: notify.mobile_app
              data:
                message: Time to get ready!
            - delay:
                minutes: 5
    else:
      - action: notify.mobile_app
        data:
          message: Enjoy your day off!
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_16:
        x: 40
        "y": 57
      condition_test_1_17:
        x: 360
        "y": 47
      condition_test_2_18:
        x: 700
        "y": 180
      action_test_3_19:
        x: 1040
        "y": 244
      delay_test_4_20:
        x: 1360
        "y": 190
      action_test_5_21:
        x: 700
        "y": 40
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 29-stop-action.yaml to identical YAML 1`] = `
"alias: Stop Action Test
description: Test stop action round-trip
triggers:
  - trigger: state
    entity_id: binary_sensor.motion_sensor
    to: "on"
conditions:
  - condition: state
    entity_id: input_boolean.enabled
    state: "on"
actions:
  - stop: Not enabled
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_13:
        x: 40
        "y": 50
      condition_test_1_14:
        x: 360
        "y": 40
      action_test_2_15:
        x: 700
        "y": 50
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 30-calendar-datetime-trigger.yaml to identical YAML 1`] = `
"alias: Calendar and datetime sensor triggers
description: Tests calendar trigger with offset and time trigger with sensor entity + offset
triggers:
  - trigger: calendar
    entity_id: calendar.work_calendar
    offset: "-00:30:00"
    event: start
  - trigger: time
    at:
      entity_id: sensor.alarm_time
      offset: "00:15:00"
actions:
  - action: light.turn_on
    target:
      entity_id: light.bedroom
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_10:
        x: 40
        "y": 180
      trigger_test_1_11:
        x: 40
        "y": 40
      action_test_2_12:
        x: 360
        "y": 53
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 31-or-condition-node.yaml to identical YAML 1`] = `
"alias: OR Condition Node Test
description: Tests an OR condition node with nested sub-conditions
triggers:
  - trigger: state
    entity_id: binary_sensor.motion
    to: "on"
actions:
  - if:
      - condition: or
        conditions:
          - condition: state
            entity_id: light.living_room
            state: "off"
          - condition: state
            entity_id: light.bedroom
            state: "off"
    then:
      - action: light.turn_on
        target:
          entity_id: light.all
    else:
      - action: light.turn_off
        target:
          entity_id: light.all
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_6:
        x: 40
        "y": 57
      condition_test_1_7:
        x: 360
        "y": 47
      action_test_2_8:
        x: 700
        "y": 40
      action_test_3_9:
        x: 700
        "y": 180
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 32-or-at-root-conditions.yaml to identical YAML 1`] = `
"alias: OR at Root Conditions
description: Tests an OR condition in the root conditions block
triggers:
  - trigger: state
    entity_id: binary_sensor.motion
    to: "on"
conditions:
  - condition: or
    conditions:
      - condition: state
        entity_id: input_boolean.guest_mode
        state: "on"
      - condition: time
        after: "08:00:00"
        before: "22:00:00"
actions:
  - action: light.turn_on
    target:
      entity_id: light.living_room
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_3:
        x: 40
        "y": 50
      condition_test_1_4:
        x: 360
        "y": 40
      action_test_2_5:
        x: 700
        "y": 50
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;

exports[`YAML round-trip (fixtures) > round-trips 33-set-variables-first.yaml to identical YAML 1`] = `
"alias: Set Variables at Start
description: Tests a set_variables node directly after a trigger
triggers:
  - trigger: state
    entity_id: binary_sensor.motion
    to: "on"
actions:
  - variables:
      target_light: light.living_room
      brightness: 80
  - action: light.turn_on
    target:
      entity_id: "{{ target_light }}"
    data:
      brightness_pct: "{{ brightness }}"
mode: single
variables:
  _flode_metadata:
    version: 1
    nodes:
      trigger_test_0_0:
        x: 40
        "y": 40
      set_variables_test_1_1:
        x: 360
        "y": 40
      action_test_2_2:
        x: 680
        "y": 40
    graph_id: a18b0fbb-d966-432c-aba7-4f7361da8d29
    graph_version: 1
    strategy: native
"
`;
